# wagtail-amazon-paapi

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
wagtail_amazon_paapi/: __init__.py  amazon_api.py  apps.py  blocks.py  models.py  panels.py  urls.py  views.py  wagtail_hooks.py
wagtail_amazon_paapi/migrations/: 0001_initial.py
wagtail_amazon_paapi/static/wagtail_amazon_paapi/css/: amazon_product_block.css  amazon_product_block_admin.css
wagtail_amazon_paapi/templates/wagtail_amazon_paapi/admin/panels/: amazon_update_panel.html
wagtail_amazon_paapi/templates/wagtail_amazon_paapi/blocks/: amazon_product_content.html  amazon_product_snippet.html  amazon_product_snippet_form.html
wagtail_amazon_paapi/tests/: test_blocks.py
